--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
-.idea
-venv
-node_modules
+.DS_Store
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
 
-*.sqlite3
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+#python
 *.pyc
+db.sqlite3
