--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^4.0.5",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "tailwindcss": "^1.1.3",
     "vue": "^2.6.10"
   },
   "devDependencies": {
