--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@vue/cli": "^4.0.5",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "eslint-plugin-html": "^6.0.0",
     "tailwindcss": "^1.1.3",
     "vue": "^2.6.10"
   },
@@ -36,11 +37,6 @@
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
     }
   },
   "browserslist": [
