--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@vue/cli": "^4.0.5",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
