--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-.DS_Store
+
 node_modules/
 dist/
 npm-debug.log
 yarn-error.log
+frontend/webpack-stats.json
+
+
 
 # Editor directories and files
 .idea
@@ -10,6 +13,7 @@ yarn-error.log
 *.ntvs*
 *.njsproj
 *.sln
+.DS_Store
 
 #python
 *.pyc
