webpack-stats aus .gitignore entfernt

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ node_modules/
 dist/
 npm-debug.log
 yarn-error.log
-frontend/webpack-stats.json
-
+*/webpack-stats.json
 
 
 # Editor directories and files
