--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "eslint-plugin-html": "^6.0.0",
+    "marked": "^0.7.0",
     "tailwindcss": "^1.1.3",
     "vue": "^2.6.10"
   },
