--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "/home/daniel/anaconda3/envs/laurasBlog/bin/python"
+		"python.pythonPath": "/home/daniel/anaconda3/envs/laurasBlog/bin/python",
+		"editor.tabSize": 2,
+		"editor.insertSpaces": true,
+		"editor.detectIndentation": true
 }
