--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "es6-promise": "^4.2.8",
     "marked": "^0.7.0",
     "tailwindcss": "^1.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuex": "^3.1.2",
     "webpack-bundle-tracker": "^0.4.3"
   },
   "devDependencies": {
