--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,31 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        
-        {
-            "name": "Python: Django",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/manage.py",
-            "args": [
-                "runserver",
-                "--noreload"
-            ],
-            "django": true
-        }
-    ]
+  // Use IntelliSense to learn about possible Node.js debug attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "VueJS",
+      "runtimeExecutable": "${workspaceFolder}/frontend/",
+      "runtimeArgs": [
+        "serve"
+      ],
+      "port": 8080,
+      "cwd": "${workspaceRoot}",
+      "timeout": 10000
+    },
+    {
+      "name": "Python: Django",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/manage.py",
+      "args": [
+          "runserver",
+          "--noreload"
+      ],
+      "django": true
+    }
+  ]
 }
