--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 node_modules/
 dist/
 npm-debug.log
@@ -7,6 +6,8 @@ yarn-error.log
 
 
 # Editor directories and files
+.vscode/settings.json
+.vscode/tags
 .idea
 *.suo
 *.ntvs*
