--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,13 @@
       "type": "node",
       "request": "launch",
       "name": "VueJS",
-      "runtimeExecutable": "${workspaceFolder}/frontend/",
+      "runtimeExecutable": "${workspaceFolder}/frontend",
       "runtimeArgs": [
         "yarn",
         "serve"
       ],
       "port": 8080,
-      "cwd": "${workspaceRoot}",
+      "cwd": "${workspaceFolder}/frontend",
       "timeout": 10000
     },
     {
