--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "es6-promise": "^4.2.8",
+    "lodash": "^4.17.15",
     "marked": "^0.7.0",
     "tailwindcss": "^1.1.4",
     "vue": "^2.6.10",
