--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "es6-promise": "^4.2.8",
     "lodash": "^4.17.15",
     "marked": "^0.7.0",
+    "serve": "^11.3.0",
     "tailwindcss": "^1.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
