--- a/docker/web/laurasBlog.yml
+++ b/docker/web/laurasBlog.yml
@@ -7,14 +7,14 @@ dependencies:
   - _openmp_mutex=4.5=0_gnu
   - asgiref=3.2.3=py_0
   - astroid=2.3.3=py38_1
-  - ca-certificates=2019.11.27=0
+  - ca-certificates=2019.11.28=hecc5488_0
   - certifi=2019.11.28=py38_0
   - django=3.0.2=py38_0
   - djangorestframework=3.11.0=py_0
   - gunicorn=20.0.4=py38_0
   - icu=64.2=he1b5a44_1
   - isort=4.3.21=py38_0
-  - lazy-object-proxy=1.4.3=py38h516909a_0
+  - lazy-object-proxy=1.4.3=py38h516909a_1
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libffi=3.2.1=he1b5a44_1006
   - libgcc-ng=9.2.0=h24d8f2e_2
@@ -23,19 +23,20 @@ dependencies:
   - libuv=1.34.0=h516909a_0
   - mccabe=0.6.1=py_1
   - ncurses=6.1=hf484d3e_1002
-  - nodejs=13.6.0=h10a4023_0
-  - openssl=1.1.1d=h7b6447c_3
-  - pip=19.3.1=py38_0
+  - nodejs=13.7.0=h10a4023_0
+  - openssl=1.1.1d=h516909a_0
+  - pip=20.0.2=py38_0
   - pylint=2.4.4=py38_0
   - python=3.8.1=h357f687_1
   - pytz=2019.3=py_0
   - readline=8.0=hf8c457e_0
-  - setuptools=45.0.0=py38_1
+  - setuptools=45.1.0=py38_0
   - six=1.14.0=py38_0
   - sqlite=3.30.1=hcee41ef_0
   - sqlparse=0.3.0=py_0
   - tk=8.6.10=hed695b0_0
   - wheel=0.33.6=py38_0
+  - whitenoise=4.1.4=py_0
   - wrapt=1.11.2=py38h516909a_0
   - xz=5.2.4=h14c3975_1001
   - yarn=1.21.1=0
