--- a/docker/web/djangoVue.yml
+++ b/docker/web/djangoVue.yml
@@ -1,4 +1,4 @@
-name: laurasBlog
+name: djangoVue
 channels:
   - conda-forge
   - defaults
@@ -35,7 +35,7 @@ dependencies:
   - sqlite=3.30.1=hcee41ef_0
   - sqlparse=0.3.0=py_0
   - tk=8.6.10=hed695b0_0
-  - wheel=0.33.6=py38_0
+  - wheel=0.34.1=py38_0
   - whitenoise=4.1.4=py_0
   - wrapt=1.11.2=py38h516909a_0
   - xz=5.2.4=h14c3975_1001
@@ -43,5 +43,5 @@ dependencies:
   - zlib=1.2.11=h516909a_1006
   - pip:
     - django-webpack-loader==0.6.0
-prefix: /home/daniel/anaconda3/envs/laurasBlog
+prefix: /home/daniel/anaconda3/envs/djangoVue
 
