--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: ./docker/web
     container_name: web
     command: bash -c "source activate djangoVue && python manage.py collectstatic --no-input --settings=djangoVue.settings_prod && python manage.py migrate --settings=djangoVue.settings_prod && gunicorn djangoVue.wsgi -b 0.0.0.0:8000"
+    depends_on:
+      - db
     volumes:
       - ./:/web/
     networks:
@@ -14,9 +16,26 @@ services:
       - "3000:8000"
     restart: always
 
+  db:
+    image: postgres:alpine
+    container_name: db
+    volumes:
+      - djangoVue_postgres:/var/lib/postgresql/data
+    networks:
+      nginx_proxy:
+        ipv4_address: 10.5.0.13
+    ports:
+      - '5432:5432'
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRESQL_PASSWORD}
+    restart: always
+
 networks:
   default:
     external:
       name: nginx_proxy
   nginx_proxy:
     external: true
+
+volumes:
+  djangoVue_postgres:
