--- a/docker/web/djangoVue.yml
+++ b/docker/web/djangoVue.yml
@@ -10,15 +10,19 @@ dependencies:
   - ca-certificates=2019.11.28=hecc5488_0
   - certifi=2019.11.28=py38_0
   - django=3.0.2=py38_0
+  - django-environ=0.4.5=py_1
   - djangorestframework=3.11.0=py_0
   - gunicorn=20.0.4=py38_0
   - icu=64.2=he1b5a44_1
   - isort=4.3.21=py38_0
+  - krb5=1.16.4=h2fd8d38_0
   - lazy-object-proxy=1.4.3=py38h516909a_1
   - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libedit=3.1.20170329=hf8c457e_1001
   - libffi=3.2.1=he1b5a44_1006
   - libgcc-ng=9.2.0=h24d8f2e_2
   - libgomp=9.2.0=h24d8f2e_2
+  - libpq=11.5=hd9ab2ff_2
   - libstdcxx-ng=9.2.0=hdf63c60_2
   - libuv=1.34.0=h516909a_0
   - mccabe=0.6.1=py_1
@@ -26,6 +30,7 @@ dependencies:
   - nodejs=13.7.0=h10a4023_0
   - openssl=1.1.1d=h516909a_0
   - pip=20.0.2=py38_0
+  - psycopg2=2.8.4=py38h72c5cf5_0
   - pylint=2.4.4=py38_0
   - python=3.8.1=h357f687_1
   - pytz=2019.3=py_0
