--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: ./docker/web
     container_name: web
-    command: bash -c "source activate djangoVue && python manage.py collectstatic --no-input --settings=djangoVue.settings_prod && python manage.py migrate --settings=djangoVue.settings_prod && gunicorn djangoVue.wsgi -b 0.0.0.0:8000"
+    command: bash -c "source activate djangoVue && python manage.py collectstatic --no-input --settings=djangoVue.settings && python manage.py migrate --settings=djangoVue.settings && gunicorn djangoVue.wsgi -b 0.0.0.0:8000"
     depends_on:
       - db
     volumes:
@@ -26,8 +26,11 @@ services:
         ipv4_address: 10.5.0.13
     ports:
       - '5432:5432'
+    env_file:
+      - ./djangoVue/.env
     environment:
-      POSTGRES_PASSWORD: ${POSTGRESQL_PASSWORD}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
     restart: always
 
 networks:
