setting lists in ALLOWD_HOSTS

--- a/djangoVue/.env.example
+++ b/djangoVue/.env.example
@@ -1,6 +1,6 @@
 DB=postgres
 DEBUG=False
-ALLOWED_HOSTS=['localhost']
+ALLOWED_HOSTS=127.0.0.1, localhost
 SECRET_KEY=v06sb^%zx_th^qp$zd#tef329fml638iz@8_so0yed6xk7!#iw
 POSTGRES_HOST=10.5.0.13
 POSTGRES_USER=postgres
