--- a/docker/web/djangoVue.yml
+++ b/docker/web/djangoVue.yml
@@ -7,14 +7,16 @@ dependencies:
   - _openmp_mutex=4.5=0_gnu
   - asgiref=3.2.3=py_0
   - astroid=2.3.3=py38_1
-  - ca-certificates=2019.11.28=hecc5488_0
+  - ca-certificates=2020.1.1=0
   - certifi=2019.11.28=py38_0
   - django=3.0.2=py38_0
   - django-environ=0.4.5=py_1
   - djangorestframework=3.11.0=py_0
+  - freetype=2.9.1=h8a8886c_1
   - gunicorn=20.0.4=py38_0
   - icu=64.2=he1b5a44_1
   - isort=4.3.21=py38_0
+  - jpeg=9b=h024ee3a_2
   - krb5=1.16.4=h2fd8d38_0
   - lazy-object-proxy=1.4.3=py38h516909a_1
   - ld_impl_linux-64=2.33.1=h53a641e_8
@@ -22,13 +24,17 @@ dependencies:
   - libffi=3.2.1=he1b5a44_1006
   - libgcc-ng=9.2.0=h24d8f2e_2
   - libgomp=9.2.0=h24d8f2e_2
+  - libpng=1.6.37=hbc83047_0
   - libpq=11.5=hd9ab2ff_2
   - libstdcxx-ng=9.2.0=hdf63c60_2
+  - libtiff=4.1.0=h2733197_0
   - libuv=1.34.0=h516909a_0
   - mccabe=0.6.1=py_1
   - ncurses=6.1=hf484d3e_1002
   - nodejs=13.7.0=h10a4023_0
-  - openssl=1.1.1d=h516909a_0
+  - olefile=0.46=py_0
+  - openssl=1.1.1d=h7b6447c_3
+  - pillow=7.0.0=py38hb39fc2d_0
   - pip=20.0.2=py38_1
   - psycopg2=2.8.4=py38h72c5cf5_0
   - pylint=2.4.4=py38_0
@@ -46,6 +52,7 @@ dependencies:
   - xz=5.2.4=h14c3975_1001
   - yarn=1.21.1=0
   - zlib=1.2.11=h516909a_1006
+  - zstd=1.3.7=h0b5b093_0
   - pip:
     - django-webpack-loader==0.6.0
 prefix: /home/daniel/anaconda3/envs/djangoVue
