--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^1.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-spinner": "^1.0.3",
     "vuex": "^3.1.2",
     "webpack-bundle-tracker": "^0.4.3"
   },
