--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: ./docker/django
     container_name: django
-cd    volumes:
+    volumes:
       - ./:/www/site
     environment:
       PYTHONUNBUFFERED: "TRUE"
@@ -12,8 +12,8 @@ cd    volumes:
     networks:
       nginx_proxy:
         ipv4_address: 10.5.0.12
-    ports:
-      - "8000"
+    expose:
+      - "3000"
     restart: always
 
 networks:
