--- a/docker/django/Dockerfile
+++ b/docker/django/Dockerfile
@@ -12,12 +12,9 @@ ADD ./requirements.txt /root/requirements.txt
 RUN pip3 install -r /root/requirements.txt
 
 WORKDIR /www/site
-EXPOSE 8000
+EXPOSE 3000
 ENV DJANGO_SETTINGS_MODULE "djangoVue.settings"
-
 
 CMD python manage.py collectstatic --no-input
 CMD python manage.py migrate
-CMD uvicorn --reload --host 0.0.0.0 djangoVue.asgi:application
-
-
+CMD uvicorn --reload --host 0.0.0.0 --port 3000 djangoVue.asgi:application
