--- a/docker/django/Dockerfile
+++ b/docker/django/Dockerfile
@@ -15,4 +15,4 @@ WORKDIR /www/site
 EXPOSE 3000
 ENV DJANGO_SETTINGS_MODULE "djangoVue.settings"
 
-CMD python3 manage.py collectstatic && python3 manage.py migrate && uvicorn --reload --host 0.0.0.0 --port 3000 djangoVue.asgi:application
+CMD python3 manage.py collectstatic --no-input && python3 manage.py migrate && uvicorn --reload --host 0.0.0.0 --port 3000 djangoVue.asgi:application
