--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,21 @@
-node_modules/
-dist/
-npm-debug.log
-yarn-error.log
-*/webpack-stats.json
-frontend/package-lock.json
+# Envirion
+.env
+rsync.sh
 
 # Editor directories and files
 .vscode/settings.json
 .vscode/tags
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-.DS_Store
 
-# Python
+# Django
 *.pyc
 __pycache__
-
-# Django 
-media
-static
-
 db.sqlite3
+media/
+static/
 
-
-.env
-rsync.sh
+# Vue
+node_modules/
+dist/
+npm-debug.log
+*/webpack-stats.json
+vue/frontend/package-lock.json
