--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,25 @@
 version: '3'
 
 services:
-  django:
-    build: ./django
-    container_name: django
-    volumes:
-      - ./django:/www/site
-    environment:
-      PYTHONUNBUFFERED: "TRUE"
-    user: "${USERID}:${GROUPID}"
-    networks:
-      nginx_proxy:
-        ipv4_address: 10.5.0.12
-    expose:
-      - "3000"
-    restart: always
-
   vue:
     build: ./vue
     container_name: node
     volumes:
       - ./vue:/usr/src/app
     user: "${USERID}:${GROUPID}"
-    command: "npm run serve"
-    networks:
-      nginx_proxy:
-        ipv4_address: 10.5.0.14
-    expose:
-      - "8080"
-    
+    ports:
+      - "8080:8080"
 
-networks:
-  default:
-    external:
-      name: nginx_proxy
-  nginx_proxy:
-    external: true
+  django:
+    build: ./docker/django
+    container_name: django
+    volumes:
+      - ./django:/www/site
+      - ./vue:/www/site/frontend
+    environment:
+      PYTHONUNBUFFERED: "TRUE"
+    user: "${USERID}:${GROUPID}"
+    ports:
+      - "8000:8000"
+    restart: always
+
