--- a/vue/Dockerfile
+++ b/vue/Dockerfile
@@ -4,8 +4,10 @@ WORKDIR /usr/src/app
 
 ADD ./package.json /usr/src/app
 
-RUN npm install
-
 RUN cat /usr/src/app/package.json
 
-CMD npm run build && npm run serve
+RUN npm install
+
+RUN cat /usr/src/app/package-lock.json
+
+CMD npm run build
