--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,17 @@
 .env
 rsync.sh
 
+# local env files
+.env
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
 # Editor directories and files
 .vscode/settings.json
 .vscode/tags
