echange docker container to python:buster

--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -1,18 +1,15 @@
-FROM fedora
+FROM python:buster
 
-RUN dnf -y update
-RUN dnf -y install git
-RUN dnf -y install python3-psycopg2
-RUN dnf -y install python3-gunicorn python3-httptools gcc
-RUN dnf -y install python3-devel 
-RUN dnf -y install python3-pip
-
-RUN echo 'export PS1="[\u@docker] \W # "' >> /root/.bash_profile
-ADD ./requirements.txt /root/requirements.txt
-RUN pip3 install -r /root/requirements.txt
+ENV PYTHONUNBUFFERED 1
 
 WORKDIR /www/site
-EXPOSE 8000
+
+ADD ./requirements.txt /www/site/requirements.txt
+
+RUN pip install -r /www/site/requirements.txt
+
+EXPOSE 3000
+
 ENV DJANGO_SETTINGS_MODULE "djangoVue.settings"
 
-CMD python3 manage.py collectstatic --no-input && python3 manage.py migrate && uvicorn --reload --host 0.0.0.0 --port 8000 djangoVue.asgi:application
+CMD python3 manage.py collectstatic --no-input && python3 manage.py migrate && uvicorn --reload --host 0.0.0.0 --port 3000 djangoVue.asgi:application
