--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./vue
     container_name: vue
     volumes:
-      - /home/daniel/dev/djangoVue/vue:/usr/src/app
+      - ${PWD}/vue:/usr/src/app
     command: "npm run serve"
     user: "${USERID}:${GROUPID}"
     ports:
@@ -15,12 +15,27 @@ services:
     build: ./django
     container_name: django
     volumes:
-      - ./django:/www/site
-      - ./vue:/www/site/frontend
+      - ${PWD}/django:/www/site
+      - ${PWD}/vue:/www/site/frontend
     environment:
       PYTHONUNBUFFERED: "TRUE"
     user: "${USERID}:${GROUPID}"
     ports:
-      - "8000:8000"
+      - "3000:3000"
     restart: always
 
+  postgres:
+    build: "./postgres"
+    restart: always
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PWD}/data/pgdata
