--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -12,4 +12,4 @@ EXPOSE 3000
 
 ENV DJANGO_SETTINGS_MODULE "djangoVue.settings"
 
-CMD python3 manage.py collectstatic --no-input && python3 manage.py migrate && uvicorn --reload --host 0.0.0.0 --port 3000 djangoVue.asgi:application
+CMD uvicorn --reload --host 0.0.0.0 --port 3000 djangoVue.asgi:application
