--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -41,7 +41,7 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: ${PWD}/data/pgdata
+      device: ${PWD}/data/postgresdata
  
 
 
