--- a/fabric/settings.example.json
+++ b/fabric/settings.example.json
@@ -1,17 +1,35 @@
 {
   "development": {
+    "django": {
+      "DEBUG": "True",
+      "ALLOWED_HOSTS": "127.0.0.1,localhost",
+      "DB": "postgres",
+      "POSTGRES_HOST": "postgres",
+      "POSTGRES_USER": "postgres",
+      "POSTGRES_PASSWORD": "postgres",
+      "SECRET_KEY": "v06sb^%zx_th^qp$zd#tef329fml638iz@8_so0yed6xk7!#iw",
+    },
     "initFolders": [
-      "data/postgresdata",
+      "data/postgresdata", 
       "log/nginx",
       "media"
     ]
   },
   "production": {
     "installationFolder": "/www/",
+    "django": {
+      "DEBUG": "False",
+      "ALLOWED_HOSTS": "127.0.0.1,localhost",
+      "DB": "postgres",
+      "POSTGRES_HOST": "postgres",
+      "POSTGRES_USER": "postgres",
+      "POSTGRES_PASSWORD": "postgres",
+      "SECRET_KEY": "v06sb^%zx_th^qp$zd#tef329fml638iz@8_so0yed6xk7!#iw",
+    },
     "initFolders": [
-      "data/postgresdata",
+      "data/postgresdata", 
       "log/nginx",
-      "media"
+      "django/media"
     ]
   }
 }
