--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@
 .env.local
 .env.*.local
 
+# Folders
+data/
+
+
 # Log files
+log/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -14,13 +19,14 @@ yarn-error.log*
 .vscode/settings.json
 .vscode/tags
 
+
 # Django
 *.pyc
 __pycache__
 db.sqlite3
-media/
-static/
-data/
+django/media/
+django/static/
+
 
 # Vue
 node_modules/
@@ -28,6 +34,7 @@ dist/
 npm-debug.log
 */webpack-stats.json
 vue/frontend/package-lock.json
+
 
 # Deployment
 fabric/settings.json
