--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,4 +41,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: ${PWD}/data/pgdata
+      device: ${PWD}/data/postgresdata
