--- a/fabric/settings.example.json
+++ b/fabric/settings.example.json
@@ -23,6 +23,12 @@
       "POSTGRES_PASSWORD": "postgres"
     }
   },
+  "test": {
+    "docker_compose_files": [
+      "./docker-compose.default.yml",
+      "./docker-compose.test.yml"
+    ]
+  },
   "production": {
     "installationFolder": "/www/",
     "initFolders": [
