--- a/docker-compose.default.yml
+++ b/docker-compose.default.yml
@@ -13,13 +13,16 @@ services:
     user: "${USERID}:${GROUPID}"
     ports:
       - "3000:3000"
+    depends_on: 
+      - postgres
 
   postgres:
     restart: always
     build: "./postgres"
+    container_name: postgres
     environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
