update default docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3'
+version: '3.7'
 
 services:  
   django:
     restart: always
-    build: 
-      context: ./django
+    build: ./django
     container_name: django
+    user: "${USERID}:${GROUPID}"
     environment:
       PYTHONUNBUFFERED: "TRUE"
     user: "${USERID}:${GROUPID}"
@@ -18,8 +18,7 @@ services:
       - frontend:/www/site/frontend
 
   postgres:
-    build: 
-      context: ./postgres
+    build: ./postgres
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -29,3 +28,6 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
