rename filename from dev to development

--- a/fabric/settings.example.json
+++ b/fabric/settings.example.json
@@ -2,7 +2,7 @@
   "development": {
     "docker_compose_files": [
       "./docker-compose.yml",
-      "./docker-compose.dev.yml"
+      "./docker-compose.development.yml"
     ],
     "initFolders": [
       "data/postgresdata",
