--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,4 +12,27 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: ${INSTALLFOLDER}/djangoVue/django
+      device: ${INSTALLFOLDER}/django
+  frontend:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${INSTALLFOLDER}/vue
+
+services: 
+  django:
+    networks:
+      nginx_proxy:
+        ipv4_address: ${DJANGO_HOST}
+  postgres:
+    networks:
+      nginx_proxy:
+        ipv4_address: ${POSTGRES_HOST}
+
+networks:
+  default:
+    external:
+      name: nginx_proxy
+  nginx_proxy:
+    external: true
