--- a/fabric/settings.example.json
+++ b/fabric/settings.example.json
@@ -27,8 +27,24 @@
   "test": {
     "docker_compose_files": [
       "./docker-compose.yml",
-      "./docker-compose.test.yml"
-    ]
+      "./docker-compose.production.yml"
+    ],
+    "django": {
+      "DEBUG": "False",
+      "ALLOWED_HOSTS": "127.0.0.1,localhost",
+      "DB": "postgres",
+      "POSTGRES_HOST": "10.5.0.13",
+      "POSTGRES_USER": "postgres",
+      "POSTGRES_PASSWORD": "postgres",
+      "SECRET_KEY": "v06sb^%zx_th^qp$zd#tef329fml638iz@8_so0yed6xk7!#iw"
+    },
+    "docker": {
+      "INSTALLFOLDER": "/home/daniel/dev/djangoVue",
+      "DJANGO_HOST": "10.5.0.12",
+      "POSTGRES_HOST": "10.5.0.13",
+      "POSTGRES_USER": "postgres",
+      "POSTGRES_PASSWORD": "postgres"
+    }
   },
   "production": {
     "initFolders": [
@@ -36,26 +52,32 @@
       "log/nginx",
       "django/media"
     ],
+    "docker_compose_files": [
+      "./docker-compose.yml",
+      "./docker-compose.production.yml"
+    ],
     "django": {
       "DEBUG": "False",
-      "ALLOWED_HOSTS": "127.0.0.1,localhost",
+      "ALLOWED_HOSTS": "example.com,www.example.com",
       "DB": "postgres",
-      "POSTGRES_HOST": "postgres",
+      "POSTGRES_HOST": "10.5.0.13",
       "POSTGRES_USER": "postgres",
       "POSTGRES_PASSWORD": "postgres",
       "SECRET_KEY": "v06sb^%zx_th^qp$zd#tef329fml638iz@8_so0yed6xk7!#iw"
     },
     "docker": {
-      "INSTALLFOLDER": "~/djangoVue",
+      "INSTALLFOLDER": "/home/webserver/djangoVue",
+      "DJANGO_HOST": "10.5.0.12",
+      "POSTGRES_HOST": "10.5.0.13",
       "POSTGRES_USER": "postgres",
       "POSTGRES_PASSWORD": "postgres"
     },
-    "remote_user": "example.org",
-    "remote_host": "example",
+    "remote_user": "example",
+    "remote_host": "example.com",
     "rsync": {
       "django": {
-        "local_dir": "~/dev/djangoVue/django",
-        "remote_dir": "~/djangoVue",
+        "local_dir": "/home/daniel/dev/djangoVue/django",
+        "remote_dir": "/www/djangoVue",
         "exclude": [
           "static",
           "media",
@@ -64,16 +86,16 @@
         ]
       },
       "static": {
-        "local_dir": "~/dev/djangoVue/django/static",
-        "remote_dir": "/home/www/djangoVue/django/"
+        "local_dir": "/home/daniel/dev/djangoVue/django/static",
+        "remote_dir": "/www/djangoVue/django/static"
       },
       "postgres": {
-        "local_dir": "~/dev/dev/djangoVue/postgres",
-        "remote_dir": "/home/www/djangoVue/"
+        "local_dir": "/home/daniel/dev/djangoVue/postgres",
+        "remote_dir": "/www/djangoVue/"
       },
       "fabric": {
-        "local_dir": "~/dev/djangoVue/fabric",
-        "remote_dir": "/home/www/djangoVue/",
+        "local_dir": "/home/daniel/dev/djangoVue/fabric",
+        "remote_dir": "/www/djangoVue/fabric",
         "exclude": [
           "cert"
         ]
