--- a/vue/Dockerfile
+++ b/vue/Dockerfile
@@ -2,8 +2,6 @@ FROM node:lts
 
 WORKDIR /usr/src/app
 
-ADD ./package.json /usr/src/app
-
-ADD ./package-lock.json /usr/src/app
+ADD ./package.*json /usr/src/app
 
 RUN npm install
