--- a/nginx/djangoVue.conf
+++ b/nginx/djangoVue.conf
@@ -28,5 +28,15 @@ server {
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
         proxy_set_header    X-Forwarded-Host    $server_name;
     }
+    
+    location /static/ {
+        autoindex on;
+        alias /www/static/;
+    }
+
+    location /media/ {
+        autoindex on;
+        alias /www/media/;
+    }
 }
 
