--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 
 volumes:
-  postgres_data:
+  postgresdata:
     driver: local
     driver_opts:
       type: none
@@ -59,13 +59,15 @@ services:
     restart: unless-stopped
     build: 
       context: ./nginx
+    environment:
+      - VIRTUAL_HOST=local
     volumes:
       - nginx:/etc/nginx/conf.d
       - django:/www/site
       - static:/www/static
       - media:/www/media
       - log:/log
-    ports:
+    port:
       - "80:80"
     depends_on: 
       - django
