--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,20 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  nginx:
+    restart: unless-stopped
+    build: 
+      context: ./nginx
+    environment:
+      VIRTUAL_HOST: "local.localhost"
+    volumes:
+      - nginx:/etc/nginx/conf.d
+      - django:/www/site
+      - static:/www/static
+      - media:/www/media
+      - log:/log
+    expose:
+      - "80"
+    depends_on: 
+      - django
+      - postgres
