--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -55,3 +55,21 @@ services:
     user: "${USERID}:${GROUPID}"
     ports:
       - "8080:8080"
+  nginx:
+    restart: unless-stopped
+    container_name: nginx
+    build: 
+      context: ./nginx
+    environment:
+      - VIRTUAL_HOST=lolo.milena-and-her-dog.com
+    volumes:
+      - nginx:/etc/nginx/conf.d
+      - django:/www/site
+      - static:/www/static
+      - media:/www/media
+      - log:/log
+    expose: 
+      - 80
+    depends_on: 
+      - django
+      - postgres
